--- a/practicaformulario 29-04-19/public_html/index.html
+++ b/practicaformulario 29-04-19/public_html/index.html
@@ -73,7 +73,7 @@
                                         <label>CI:</label>
                                     </div>
                                     <div class="col-75">
-                                        <input type="text" id="cic" onkeypress="return soloNumeros(event)" onkeyup="formatearNumero(this, this.value.charAt(this.value.length - 1))" placeholder="Numero de ci..." required="required">
+                                        <input type="text" id="cic" onkeypress="return soloNumeros(event)" onkeyup="formatearNumero(this, this.value.charAt(this.value.length - 1))" placeholder="Nº Cédula..." required="required">
                                     </div>
                                 </div>
                                 <div class="fila">
